@@ -10,9 +10,18 @@
 	* comutil.h: Disable c++ code for in c.
 	* comdef.h: Likewise.
 	* comip.h: Likewise.
-	* madcapcl.h: Add dependecy to winternl.h.
+	* mspenum.h: Likewise.
+	* stllock.h: Likewise.
+	* madcapcl.h: Add include winternl.h.
 	* msidef.h: (msidbLocatorType): Correct typo.
-	* mapiwz.h: Add dependentcy to mapidefs.h for LPMAPIPROP.
+	* mapiwz.h: Add include mapidefs.h for LPMAPIPROP.
+	* traffic.h: Add include ntddndis.h.
+	* correg.h: Typedef enum CorSaveSize.
+	* ratings.h: Correct typo.
+	* xcmcmsx2.h: Add include xcmc.h.
+	* stm.h: Default to MPR50 if not MPR50 or MPR40 is not defined.
+	* wiadef.h: Add error message to include via.h in front.
+	* conio.h: Correct declaration of __readmsr.
 
 2008-01-29  Wesley W. Terpstra  <wesley@terpstra.ca>
 
